--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -10,12 +10,11 @@ status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   # cname: demo.upptime.js.org
+  title: meteor-satchat demo uptime monitor
   baseUrl: /meteor-satchat-demo-uptime
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: meteor-satchat demo uptime
+  name: meteor-satchat demo uptime monitor
   navbar:
-    - title: Status
-      href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
   workflowSchedule:
